name:              pirana
version:           0.1.0.0
license:           GPL-3
license-file:      LICENSE
author:            aurelien.deharbe@lip6.fr
maintainer:        aurelien.deharbe@lip6.fr
category:          Language
build-type:        Simple
cabal-version:     >=1.8

executable pirana
  main-is:           Main.hs
  other-modules:     
  build-depends:     base >=4.6
  hs-source-dirs:    src
  ghc-options:       -Wall
